Bug 112101 - FILEOPEN: Crash with Application Error when opening file with particular office:event-listeners
Summary: FILEOPEN: Crash with Application Error when opening file with particular offi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
5.3.5.2 release
Hardware: All All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.3.7 target:5.4.2
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-30 07:21 UTC by Dinh Le
Modified: 2017-08-31 13:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
crashes with application error (1.89 KB, application/vnd.oasis.opendocument.text)
2017-08-30 07:23 UTC, Dinh Le
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinh Le 2017-08-30 07:21:38 UTC
Description:
Opening the file leads to a crash with  Application Error Fatal Exception: Signal 6

Tested it on 
version 5.3.5.2 and 
daily build 
master~2017-08-30_00.56.24_LibreOfficeDev_6.0.0.0.alpha0_Linux_x86-64_deb

OS Ubuntu 16.04.2 LTS 

Steps to Reproduce:
1.Open the file

Actual Results:  
crashes with Application Error

Expected Results:
not crashing, either opening or getting parsing error


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36
Comment 1 Dinh Le 2017-08-30 07:23:04 UTC
Created attachment 135865 [details]
crashes with application error
Comment 2 Julien Nabet 2017-08-30 07:33:17 UTC
On Windows7 with LO 5.3.5.2, I could reproduce the crash.
Comment 3 Commit Notification 2017-08-30 09:39:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e63e3e37f335e5729c59a0139c874cca02f83d76

Resolves tdf#112101 crash on particular file with office:event-listeners

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2017-08-30 10:05:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fb8fba4a99e71ba9faa9d93dc126bae80baffdde&h=libreoffice-5-3

Resolves tdf#112101 crash on particular file with office:event-listeners

It will be available in 5.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2017-08-30 10:05:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e4aabf5c75104a1d97827aafdd97308ad0fb6c4e&h=libreoffice-5-4

Resolves tdf#112101 crash on particular file with office:event-listeners

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.