Resolves tdf#112101 crash on particular file with office:event-listeners

Change-Id: I99a007543f90f4024666d296e9a775f8cee15086
Reviewed-on: https://gerrit.libreoffice.org/41724
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit e4aabf5c75104a1d97827aafdd97308ad0fb6c4e)